--- a/public/views/auth/register.html
+++ b/public/views/auth/register.html
@@ -4,8 +4,8 @@
     <h1> {{reg.message}} </h1>
   </section> -->
   <section class="login-input-container">
-    <!-- <img ng-src="../../assets/images/icons/favicon.ico" > -->
-    <h1> Fishing Spots </h1>
+    <!-- <h1> Fishing Spots </h1> -->
+    <img ng-src="../assets/images/icons/addUser.ico">
     <input type="text" ng-model="reg.user.username" placeholder="Username" />
     <input type="password" ng-model="reg.user.password" placeholder="Password" />
     <input type="password" ng-model="reg.user.email" placeholder="Email" />
