--- a/public/views/main.html
+++ b/public/views/main.html
@@ -39,7 +39,7 @@
 <!-- weather bar -->
   <section ng-repeat="weather in mc.weatherResponse" class="flex-weather_nav-container">
   <!-- shows when location is not present -->
-    <div ng-show="weather.daily == null" class="loader_weather">
+    <!-- <div ng-show="weather.daily == null" class="loader_weather">
       <h3> Searching For Current Location </h3>
         <div class="la-ball-running-dots">
           <div></div>
@@ -48,7 +48,7 @@
           <div></div>
           <div></div>
         </div>
-    </div>
+    </div> -->
   <!-- rest shows when location is present -->
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_0.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
